--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -48,39 +48,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">🔥</a>
+          <a class="navbar-brand" href="/">🏠</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li>
-              {% if (request.endpoint == 'venues') or
-                (request.endpoint == 'search_venues') or
-                (request.endpoint == 'show_venue') %}
-              <form class="search" method="post" action="/venues/search">
-                <input class="form-control"
-                  type="search"
-                  name="search_term"
-                  placeholder="Find a venue"
-                  aria-label="Search">
-              </form>
-              {% endif %}
-              {% if (request.endpoint == 'artists') or
-                (request.endpoint == 'search_artists') or
-                (request.endpoint == 'show_artist') %}
-              <form class="search" method="post" action="/artists/search">
-                <input class="form-control"
-                  type="search"
-                  name="search_term"
-                  placeholder="Find an artist"
-                  aria-label="Search">
-              </form>
-              {% endif %}
-            </li>
-          </ul>
-          <ul class="nav navbar-nav">
-            <li {% if request.endpoint == 'venues' %} class="active" {% endif %}><a href="{{ url_for('get_food') }}">login</a></li>
-            <li {% if request.endpoint == 'venues' %} class="active" {% endif %}><a href="{{ url_for('get_food') }}">foods</a></li>
-            <li {% if request.endpoint == 'venues' %} class="active" {% endif %}><a href="{{ url_for('get_macros') }}">me</a></li>
+            <li><a href="/login">login</a></li>
+            <li><a href="{{ url_for('get_food') }}">foods</a></li>
+            <li><a href="{{ url_for('get_macros') }}">me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
