--- a/templates/pages/app_home.html
+++ b/templates/pages/app_home.html
@@ -4,20 +4,20 @@
 <div class="row">
 	<div class="col-sm-6">
 		<h1>Welcome 🔥</h1>
-		<h3>
-			Here you can record and track your daily macros.
-			Choose from the following options to get a head start on a less fat you!</h3>
+		<p class="lead">
+			Choose from the following options to get a head start on your macros yo!
+		</p>
 		<p class="lead">What did you eat?</p>
 		<h3>
 			<a href="/food/add"><button class="btn btn-default btn-lg">Post a food</button></a>
 		</h3>
 		<p class="lead">If you want, you can post the macros manually</p>
 		<h3>
-			<a href="/artists/create"><button class="btn btn-default btn-lg">Post macros</button></a>
+			<a href="/macros/add"><button class="btn btn-default btn-lg">Post macros</button></a>
 		</h3>
 		<p class="lead">Need to add a food to our database?</p>
 		<h3>
-			<a href="/shows/create"><button class="btn btn-default btn-lg">Add a new food</button></a>
+			<a href="/food/new"><button class="btn btn-default btn-lg">Add a new food</button></a>
 		</h3>
 	</div>
 	<div class="col-sm-6 hidden-sm hidden-xs">
