--- a/templates/forms/post_food.html
+++ b/templates/forms/post_food.html
@@ -2,10 +2,10 @@
 {% block title %}New Artist{% endblock %}
 {% block content %}
   <div class="form-wrapper">
-    <form method="patch" class="form">
+    <form method="post" class="form">
       <h3 class="form-heading">What did you eat?</h3>
       <div class="form-group">
-        <label for="name">Food</label>
+        <label for="food">Food</label>
         {{ form.food(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
@@ -15,6 +15,7 @@
               {{ form.servings(class_ = 'form-control', placeholder='Servings', autofocus = true) }}
         </div>
       </div>
+      <br>
       <input type="submit" value="Submit Food" class="btn btn-primary btn-lg btn-block">
       {{ form.csrf_token() }}
     </form>
