--- a/templates/pages/app_login.html
+++ b/templates/pages/app_login.html
@@ -9,7 +9,7 @@
 		</p>
 		<p class="lead">Please first login to get started!</p>
 		<h3>
-			<a href="/food/add"><button class="btn btn-default btn-lg">Login</button></a>
+			<a href="/login"><button class="btn btn-default btn-lg">Login</button></a>
 		</h3>
 	</div>
 	<div class="col-sm-6 hidden-sm hidden-xs">
