--- a/templates/pages/app_home.html
+++ b/templates/pages/app_home.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="row">
 	<div class="col-sm-6">
-		<h1>Welcome 🔥</h1>
+		<h1>Welcome</h1>
+		<h2>{{user}}!</h2>
 		<p class="lead">
 			Choose from the following options to get a head start on your macros yo!
 		</p>
