--- a/templates/pages/macro.html
+++ b/templates/pages/macro.html
@@ -2,6 +2,7 @@
 {% block title %}Macros{% endblock %}
 {% block content %}
 <Ul>
+		<h1>{{username}}</h1><br>
     <li>
 		<h3>Calories</h3>
         <h4>{{ user.calories }}</h4>
