--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -52,13 +52,13 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            {% if auth_status != true %}
+            {% if 'user' not in session %}
             <li><a href="/login">login</a></li>
             {% else %}
-            <li><a href="/logout">logout</li>
-            {% endif %}
+            <li><a href="/logout">logout</a></li>
             <li><a href="{{ url_for('get_food') }}">foods</a></li>
             <li><a href="{{ url_for('get_macros') }}">me</a></li>
+            {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
